# kokorodoki

./: README.MD  SRT_USAGE.md  check_srt.py  pyproject.toml  requirements.txt  windows.md
src/: config.py  gui.py  input_hander.py  models.py  run.py  utils.py
