[project]
name = "kokorodoki"
version = "0.1.0"
description = "A TTS application powered by Kokoro-82M"
readme = "README.MD"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-only"
dependencies = [
    "pip",
    "kokoro==0.9.2",
    "sounddevice==0.5.1",
    "soundfile==0.13.1",
    "rich==14.0.0",
    "nltk==3.9.3",
    "librosa==0.11.0",
    "ttkbootstrap==1.12.0",
    "easyocr==1.7.2",
    "ordered-set==4.1.0",
    "proces==0.1.7",
    "PyAutoGUI==0.9.54",
    "PyPDF2>=3.10",
    "PyMuPDF>=1.22.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
japanese = [
    "fugashi==1.5.1",
    "jaconv==0.4.0",
    "mojimoji==0.0.13",
    "pyopenjtalk==0.4.1",
    "unidic-lite==1.0.8",
]
chinese = [
    "cn2an==0.5.23",
    "jieba==0.42.1",
    "pypinyin==0.55.0",
]
windows = [
    "pyreadline3; sys_platform == 'win32'",
    "pyperclip; sys_platform == 'win32'",
]
windows-torch = [
    "kokorodoki[windows]",
    "torch@https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "torchvision@https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "torchaudio@https://download.pytorch.org/whl/cu121/torchaudio-2.5.1%2Bcu121-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
]
dev = ["pytest"]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
    { index = "pytorch", marker = "sys_platform != 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
    { index = "pytorch", marker = "sys_platform != 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
    { index = "pytorch", marker = "sys_platform != 'win32'" },
]

[project.scripts]
kokorodoki = "main:main"
doki = "client:main"
kokorodoki-install-service = "install_service:install_service"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
